# modus

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Modusfile  README.md  build.rs  cargo-publish.sh  frontend.Dockerfile  make-release.sh  rust-toolchain.toml
.github/workflows/: rust.yml
corelib/: Cargo.toml
corelib/src/: builtin.rs  lib.rs  modusfile.rs  wellformed.rs
doc/: command-line-tool.md  development-roadmap.md  example-modus-libraries.md  language-reference.md  manual-modusfile-reference.md  manual-modusfile-syntax-and-semantics.md
examples/: Modusfile  merge-test.Modusfile  merge.Modusfile  negation.Modusfile
modus/: Cargo.toml  build.rs
modus-bin/: Cargo.toml
modus-bin/src/: buildkit.rs  buildkit_frontend.rs  main.rs
modus-lib/: Cargo.toml
modus-lib/src/: analysis.rs  builtin.rs  dockerfile.rs  imagegen.rs  lib.rs  logic.rs  modusfile.rs  sld.rs  translate.rs  transpiler.rs  unification.rs  wellformed.rs
modus/src/: buildkit.rs  buildkit_frontend.rs  buildkit_llb_types.rs  main.rs  reporting.rs
src/: analysis.rs  buildkit.rs  buildkit_frontend.rs  buildkit_llb_types.rs  builtin.rs  common_parsers.rs  datalog.rs  datalog_parser.rs  dockerfile.rs  dockerfile_parser.rs  imagegen.rs  logic.rs  main.rs  modusfile.rs  modusfile_parser.rs  registry.rs  reporting.rs  sld.rs  translate.rs  transpiler.rs  typing.rs  unification.rs  values.rs  wellformed.rs
test/: modustest.py  test_caching.py  test_copy.py  test_different_froms.py  test_from_scratch.py  test_merge.py  test_setxx.py  test_simple.py  test_solver.py
