[package]
name = "modus"
version = "0.1.0"
authors = ["Sergey Mechtaev <mechtaev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "modus-transpile"
path = "src/main.rs"

[dependencies]
nom = { version = "6", features = ["regexp"] }
clap = "2.33.3"
lazy_static = "1.4.0"
fp-core = "0.1.9"
