[package]
name = "modus"
version = "0.1.0"
authors = ["Sergey Mechtaev <mechtaev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "modus"
path = "src/main.rs"

[dependencies]
nom = { version = "7" }
nom_locate = "4.0.0"
owned_chars = "0.3.2" # useful for impl traits for custom Source input type
codespan-reporting = "0.11.1"
clap = "2.33.3"
lazy_static = "1.4.0"
fp-core = "0.1.9"
colored = "2"

[dev-dependencies]
serial_test = "*"
