[package]
name = "modus-corelib"
version = "0.1.0"
authors = ["Sergey Mechtaev <mechtaev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
nom = { version = "7" }
nom_locate = "4.0.0"
codespan-reporting = "0.11.1"
colored = "2"
lazy_static = "1.4.0"
fp-core = "0.1.9"
dot = "0.1.4" # graphviz library
thiserror = "1.0"
ptree = { version = "0.4", default-features = false, features = ["petgraph", "ansi", "value"] } # pretty-print trees
petgraph = "0.6.0"
rand = "0.8"
serde = "^1.0"

[dev-dependencies]
serial_test = "*"
