[package]
name = "modus-lib"
version = "0.1.3"
authors = ["University College London"]
edition = "2018"
license = "AGPL-3.0"
description = "A language for building container images"
homepage = "https://modus-continens.com"
documentation = "https://docs.modus-continens.com"
repository = "https://github.com/modus-continens/modus"
readme = "../README.md"
keywords = ["docker", "language", "dockerfile", "datalog", "build-system"]

[lib]
path = "src/lib.rs"

[dependencies]
nom = { version = "7" }
nom_locate = "4.0.0" # for the span
nom-supreme = "0.6.0" # for the TagError and ErrorTree
codespan-reporting = "0.11.1"
colored = "2"
lazy_static = "1.4.0"
fp-core = "0.1.9"
dot = "0.1.4" # graphviz library
thiserror = "1.0"
ptree = { version = "0.4", default-features = false, features = ["petgraph", "ansi", "value"] } # pretty-print trees
petgraph = "0.6.0"
rand = "0.8"
serde = "^1.0"
semver = "1.0"

[dev-dependencies]
serial_test = "0.6"
