[package]
name = "modus"
version = "0.1.15"
authors = ["University College London"]
edition = "2018"
default-run = "modus"
license = "AGPL-3.0"
description = "A language for building container images"
homepage = "https://modus-continens.com"
documentation = "https://docs.modus-continens.com"
repository = "https://github.com/modus-continens/modus"
readme = "../README.md"
keywords = ["docker", "language", "dockerfile", "datalog", "build-system"]

[[bin]]
name = "modus"
path = "src/main.rs"

[[bin]]
name = "buildkit-frontend"
path = "src/buildkit_frontend.rs"

[dependencies]
modus-lib = { version = "=0.1.15", path = "../modus-lib" }

clap = { version = "3", features = ["cargo"] }
colored = "2"
dot = "0.1.4" # graphviz library
thiserror = "1.0"
ptree = { version = "0.4", default-features = false, features = ["petgraph", "ansi", "value"] } # pretty-print trees
petgraph = "0.6.0"
codespan-reporting = "0.11.1"
num_cpus = "1.13.1"

# For buildkit
buildkit-frontend = "0.3.0"
buildkit-llb = "0.2.0"
tokio = { version = "^0.2", features = ["macros", "rt-core"] }
async-trait = "0.1.51"
failure = "^0.1"
serde = "^1.0"
serde_json = "^1.0"
rand = "0.8"
shell-escape = "0.1.5"
spawn-wait = "0.2"

[build-dependencies]
serde = "^1.0"
serde_json = "^1.0"
